--- a/sass/app.scss
+++ b/sass/app.scss
@@ -2,6 +2,7 @@
 @import "base/typography";
 
 @import "components/button";
+@import "components/components";
 
 @import "layout/header";
 @import "layout/footer";
