--- a/css/components.css
+++ b/css/components.css
@@ -1,11 +1,11 @@
 .bg-video {
-  position: absolute;
+  position: inline;
   top: 0;
   left: 0;
-  height: 30%;
+  height: 40%;
   width: 100%;
   z-index: 10;
-  opacity: .45;
+  opacity: .55;
   overflow: hidden;
 }
 
