--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -1,10 +1,10 @@
 body {
-  background-color: #f5d9df;
+  background-color: #1B1726;
   font-family: "Nunito", sans-serif;
 }
 
 .blurb h2 {
-  color: #EA1C2C;
+  color: $prime;
   font-weight: 100;
   font-size: 2.5rem;
 }
