--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,6 +1,8 @@
 @import "base/base";
 @import "base/typography";
 
+@import "abstracts/variables";
+
 @import "components/button";
 @import "components/components";
 
