--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,73 +1,10 @@
-body {
-  background-color: #1B1726;
-  font-family: "Nunito", sans-serif;
-}
 
-.blurb h2 {
-  color: $color-prime;
-  font-weight: 100;
-  font-size: 2.5rem;
-}
-
-.blurb p {
-  color: $color-lgrey;
-  font-weight: 100;
-  font-size: 1.125;
-  line-height: 2;
-}
-
-.content {
-  margin-top: 100px;
-  margin-bottom: 100px;
-}
-
-#mainNavbar {
-  font-size: 1.5rem;
-  font-weight: 100;
-  color: $color-tan;
-}
-
-#mainNavbar .nav-link {
-  color: white;
-}
-
-#mainNavbar .nav-link:hover {
-  color: $color-lgrey;
-}
-
-
-#mainNavbar .navbar-brand {
-  color: $color-lgrey;
-  font-size: 1.5rem;
-}
-
-
-#headingGroup span {
-  color: $color-lgrey;
-}
-
-#headingGroup h1 {
-  font-weight: 100;
-  font-size: 4rem;
-}
-
-.navbar.scrolled {
-  background: rgb(222,192,222);
-  transition: background 500ms;
-}
-
-@media (max-width: 1200px) {
-  #headingGroup h1 {
-      font-weight: 100;
-      font-size: 3rem;
+  html {
+    box-sizing: border-box;
+    /* Set font size for easy rem calculations
+     * default document font size = 16px, 1rem = 16px, 100% = 16px
+     * (100% / 16px) * 10 = 62.5%, 1rem = 10px, 62.5% = 10px
+    */
+    font-size: 62.5%;
+    scroll-behavior: smooth;
   }
-}
-  // html {
-  //   box-sizing: border-box;
-  //   /* Set font size for easy rem calculations
-  //    * default document font size = 16px, 1rem = 16px, 100% = 16px
-  //    * (100% / 16px) * 10 = 62.5%, 1rem = 10px, 62.5% = 10px
-  //   */
-  //   font-size: 62.5%;
-  //   scroll-behavior: smooth;
-  // }
